--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@angular/router": "^19.2.0",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@popperjs/core": "^2.11.8",
+    "@sweetalert2/ngx-sweetalert2": "^14.0.0",
     "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.22.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
